--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -26,7 +26,7 @@ a {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--color-primary);
 }
 
@@ -54,4 +54,9 @@ button {
 
 #js-results p {
   text-align: center;
+}
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
 }
